--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <!-- В этот список добавляй элементы галереи -->
-    <ul class="gallery js-gallery"></ul>
+    <ul class="gallery js-gallery">
+
+    </ul>
 
     <!--
       Модальное окно для полноразмерного изображения
@@ -30,5 +32,6 @@
     </div>
 
     <script src="gallery-items.js" type="module"></script>
+    <script src='galaryMK.js' type="module"></script>
   </body>
 </html>
